force-app/main/default/objects/SBQQ__Subscription__c/fields/Daily__c.field-meta.xml
<CustomField>
    <fullName>Daily__c</fullName>
    <label>Daily</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>