force-app/main/default/objects/SBQQ__Subscription__c/fields/Fully_Paid__c.field-meta.xml
<CustomField>
    <fullName>Fully_Paid__c</fullName>
    <description>Indicates the associated QuickBooks Invoice has been paid in full</description>
    <formula>AND(
    NOT(ISNULL(Quickbooks_Invoice_Balance__c)),
    Quickbooks_Invoice_Balance__c = 0
)</formula>
    <inlineHelpText>Indicates the associated QuickBooks Invoice has been paid in full</inlineHelpText>
    <label>Fully Paid</label>
    <type>Checkbox</type>
</CustomField>