force-app/main/default/objects/SBQQ__Subscription__c/fields/Net_Price_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Net_Price_Taxes__c</fullName>
    <formula>SBQQ__NetPrice__c +  Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Tax Included</inlineHelpText>
    <label>Net Price + Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>