force-app/main/default/objects/SBQQ__Subscription__c/fields/Overage_Calculation_Duration__c.field-meta.xml
<CustomField>
    <fullName>Overage_Calculation_Duration__c</fullName>
    <formula>IF(Overage_Days__c &gt; 0, Duration__c+Overage_Days__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overage Calculation Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>