force-app/main/default/objects/SBQQ__Subscription__c/fields/Overage_Charge__c.field-meta.xml
<CustomField>
    <fullName>Overage_Charge__c</fullName>
    <label>Overage Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>