force-app/main/default/objects/SBQQ__Subscription__c/fields/Overage_Days__c.field-meta.xml
<CustomField>
    <fullName>Overage_Days__c</fullName>
    <formula>MAX(Return_Date__c - Expected_End_Date__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overage Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>