force-app/main/default/objects/SBQQ__Subscription__c/fields/Partly_Paid__c.field-meta.xml
<CustomField>
    <fullName>Partly_Paid__c</fullName>
    <description>Indicates the associated QuickBooks Invoice has received partial payment</description>
    <formula>AND(Quickbooks_Invoice_Balance__c &gt; 0, Quickbooks_Invoice_Balance__c &lt; Net_Price_Taxes__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates the associated QuickBooks Invoice has received partial payment</inlineHelpText>
    <label>Partly Paid</label>
    <type>Checkbox</type>
</CustomField>