force-app/main/default/objects/SBQQ__Subscription__c/fields/Quickbooks_Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Invoice_ID__c</fullName>
    <externalId>true</externalId>
    <label>Quickbooks Invoice ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>