force-app/main/default/objects/SBQQ__Subscription__c/fields/Return_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Return_Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return Invoiced</label>
    <type>Checkbox</type>
</CustomField>