force-app/main/default/objects/SBQQ__Subscription__c/fields/Skyvia_Queue_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Skyvia_Queue_Trigger__c</fullName>
    <label>Skyvia Queue Trigger</label>
    <length>255</length>
    <type>Text</type>
</CustomField>