force-app/main/default/objects/SBQQ__Subscription__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Out for Rental</fullName>
                <default>true</default>
                <label>Out for Rental</label>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Invoice Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>