force-app/main/default/objects/SBQQ__Subscription__c/fields/Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Overage_Charge__c)),
  (SBQQ__NetPrice__c + Overage_Charge__c) * SBQQ__QuoteLine__r.SBQQ__Quote__r.Total_Tax_Rate__c,
  SBQQ__NetPrice__c * SBQQ__QuoteLine__r.SBQQ__Quote__r.Total_Tax_Rate__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>