force-app/main/default/objects/SBQQ__Subscription__c/fields/Tax_Charge__c.field-meta.xml
<CustomField>
    <fullName>Tax_Charge__c</fullName>
    <label>Tax Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>