force-app/main/default/objects/SBQQ__Subscription__c/fields/Today_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Today_Return_Date__c</fullName>
    <formula>Return_Date__c  =  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today Return Date</label>
    <type>Checkbox</type>
</CustomField>