force-app/main/default/objects/SBQQ__Subscription__c/fields/Updated_Expected_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Updated_Expected_End_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated Expected End Date</label>
    <type>Checkbox</type>
</CustomField>