force-app/main/default/objects/SBQQ__Subscription__c/fields/Week_7_DAY__c.field-meta.xml
<CustomField>
    <fullName>Week_7_DAY__c</fullName>
    <label>Week 7-DAY</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>