force-app/main/default/objects/SBQQ__Subscription__c/fields/X28_Days_Cycle_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>X28_Days_Cycle_Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>28 Days Cycle Invoiced</label>
    <type>Checkbox</type>
</CustomField>